0030004: Visualization, AIS_Manipulator - disable detection of Rotating circle when picking ray lies on its plane